[tool.poetry]
name = "sukikirai"
version = "0.1.0"
description = ""
authors = ["rf-castle"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.27.2"
openai = "^0.28.1"
langchain = "^0.0.310"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
